--- a/index.html
+++ b/index.html
@@ -12,9 +12,33 @@
     <div class="container">
         <!-- Header -->
         <header class="header">
-            <h1>Kira Queen</h1>
-            <p class="subtitle">Painel de Produtividade Pessoal</p>
+            <div class="header-left">
+                <h1>Kira Queen</h1>
+                <p class="subtitle">Painel de Produtividade Pessoal</p>
+            </div>
+            <div class="header-right" data-unauth style="display: none;">
+                <a href="login.html" class="btn btn-outline">Entrar</a>
+                <a href="register.html" class="btn btn-primary">Criar Conta</a>
+            </div>
+            <div class="header-right" data-auth style="display: none;">
+                <div class="user-menu">
+                    <span class="user-greeting">Olá, <span data-user="name">Usuário</span>!</span>
+                    <button id="logoutBtn" class="btn btn-text">Sair</button>
+                </div>
+            </div>
         </header>
+
+        <!-- Login Prompt -->
+        <div id="loginPrompt" class="login-prompt" data-unauth>
+            <div class="login-prompt-content">
+                <h2>Bem-vindo ao Kira Queen</h2>
+                <p>Faça login ou crie uma conta para começar a gerenciar suas tarefas e melhorar sua produtividade.</p>
+                <div class="login-prompt-actions">
+                    <a href="login.html" class="btn btn-primary">Fazer Login</a>
+                    <a href="register.html" class="btn btn-outline">Criar Conta</a>
+                </div>
+            </div>
+        </div>
 
         <!-- Main Content -->
         <main class="main-content">
